--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -44,7 +44,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-grey-70 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-12 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -57,7 +57,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
@@ -65,16 +65,17 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Новости.html" style="padding: 10px 20px;">Новости</a>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
 </li></ul>
@@ -93,6 +94,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
@@ -114,17 +116,17 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-795a" data-image-width="1920" data-image-height="1200">
+    <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-795a" data-image-width="1920" data-image-height="1200">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 10<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 21H2 by Adderly (21.06.2022)<br>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 Pro 21H2 by Adderly (21.06.2022)<br>
         </h6>
         <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/photo_2022-06-21_21-47-42.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-image u-image-default u-image-2" src="images/photo_2022-06-21_21-47-422.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/photo_2022-06-21_21-47-43.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/photo_2022-06-21_21-47-411.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <p class="u-align-center u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
+        <p class="u-align-center-xl u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены приложения "Zune Music, Ваш телефон, Карты, Центр отзывов, Камера, Скайп, Портал смешанной реальности, Microsoft Office, OneNote, Sticky Notes, Solitaire Collection, 3D Viewer, 3D Paint" <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
@@ -135,13 +137,13 @@
           <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)<br>
           <br>Обязательно ставить с интернетом!<br>
         </p>
-        <a href="https://drive.google.com/file/d/1xqrIeZ1BzITOFxtdxBmIS3BUKYaiiAe8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 21H2 by Adderly</a>
-        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 1607 by Adderly (22.06.2022)</h6>
+        <a href="https://drive.google.com/file/d/1xqrIeZ1BzITOFxtdxBmIS3BUKYaiiAe8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro 21H2 by Adderly [Google Drive]</a>
+        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 Pro 1607 by Adderly (22.06.2022)</h6>
         <img class="u-expanded-width-sm u-image u-image-default u-image-5" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-expanded-width-xs u-image u-image-default u-image-7" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <p class="u-align-center u-text u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
+        <p class="u-align-center-xl u-text u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены все UWP приложения, кроме калькулятора, часов, и фотографий <br>
           <br>Удалён OneDrive и Microsoft Defender из автозагрузки <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
@@ -152,23 +154,23 @@
           <br>Образ весит 4.66 GB, после установки Windows занимает 10.7 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1607 (Anniversary Update)
         </p>
-        <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 1607 by Adderly</a>
+        <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro 1607 by Adderly [Google Drive]</a>
         <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 11</a>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
       </div>
     </section>
-    <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-47ae">
+    <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-47ae">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1">К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
-        <a href="https://drive.google.com/file/d/1xqrIeZ1BzITOFxtdxBmIS3BUKYaiiAe8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 21H2 by Adderly</a>
-        <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 1607 by Adderly</a>
+        <h1 class="u-align-center-md u-align-center-sm u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1">К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <a href="https://drive.google.com/file/d/1xqrIeZ1BzITOFxtdxBmIS3BUKYaiiAe8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro  21H2 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro 1607 by Adderly [Google Drive]</a>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+    <footer class="u-align-center u-clearfix u-custom-color-12 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2022
         </p>
       </div></footer>
