--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -44,7 +44,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-grey-70 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-12 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -57,7 +57,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
@@ -65,16 +65,17 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Новости.html" style="padding: 10px 20px;">Новости</a>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
 </li></ul>
@@ -93,6 +94,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
@@ -118,7 +120,7 @@
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 11<br>
         </h1>
-        <h6 class="u-align-center-xs u-text u-text-default u-text-white u-text-2">Windows 11 V2 21H2 by Adderly (25.06.2022)<br>
+        <h6 class="u-align-center-xs u-text u-text-default u-text-white u-text-2">Windows 11 Pro V2 21H2 by Adderly (25.06.2022)<br>
         </h6>
         <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows10x64-2022-06-25-14-32-00.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows10x64-2022-06-25-14-32-48.png" alt="" data-image-width="1366" data-image-height="768">
@@ -133,9 +135,9 @@
           <br>Образ весит 5.96 GB, после установки Windows занимает 21 GB (оригинальная версия занимает 20.3 GB)<br>
           <br>Образ основан на официальном MSDN Windows 11 21H2 (22000.194)<br>(Основана на старой, чтобы вы обновились сами. Сделано это для того, чтобы работали параметры реестра для того, чтобы обойти проверку.)<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!)<br>Обязательно ставить с интернетом!
         </p>
-        <a href="https://drive.google.com/file/d/1xPUE4IkpyIm3Aj01_t7jeexayneTjI2A/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 V2 21H2 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/wpxes2p93zrs1j0/Windows+11+V2+21H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-2" target="_blank"> Скачать Windows 11 V2 21H2 by Adderly [MediaFire]</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Windows%2011%20V2%2021H2%20by%20Adderly.torrent" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-3" target="_blank"> Скачать Windows 11 V2 21H2 by Adderly [Torrent]</a>
+        <a href="https://drive.google.com/file/d/1xPUE4IkpyIm3Aj01_t7jeexayneTjI2A/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 Pro V2 21H2 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/wpxes2p93zrs1j0/Windows+11+V2+21H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-2" target="_blank"> Скачать Windows 11 Pro V2 21H2 by Adderly [MediaFire]</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Windows%2011%20V2%2021H2%20by%20Adderly.torrent" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-3" target="_blank"> Скачать Windows 11 Pro V2 21H2 by Adderly [Torrent]</a>
         <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-4">Как обойти проверку Windows 11</a>
         <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 10</a>
@@ -147,15 +149,15 @@
     <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-8496">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-md u-align-center-sm u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах. </h1>
-        <a href="https://drive.google.com/file/d/1xPUE4IkpyIm3Aj01_t7jeexayneTjI2A/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 V2 21H2 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/wpxes2p93zrs1j0/Windows+11+V2+21H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-2" target="_blank"> Скачать Windows 11 V2 21H2 by Adderly [MediaFire]</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Windows%2011%20V2%2021H2%20by%20Adderly.torrent" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-3" target="_blank"> Скачать Windows 11 V2 21H2 by Adderly [Torrent]</a>
+        <a href="https://drive.google.com/file/d/1xPUE4IkpyIm3Aj01_t7jeexayneTjI2A/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 Pro V2 21H2 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/wpxes2p93zrs1j0/Windows+11+V2+21H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-2" target="_blank"> Скачать Windows 11 Pro V2 21H2 by Adderly [MediaFire]</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Windows%2011%20V2%2021H2%20by%20Adderly.torrent" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-3" target="_blank"> Скачать Windows 11 Pro V2 21H2 by Adderly [Torrent]</a>
         <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-4">Как обойти проверку Windows 11</a>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+    <footer class="u-align-center u-clearfix u-custom-color-12 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2022
         </p>
       </div></footer>
