--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -44,7 +44,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-grey-70 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-12 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -57,7 +57,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
@@ -65,16 +65,17 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Новости.html" style="padding: 10px 20px;">Новости</a>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
 </li></ul>
@@ -93,6 +94,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
@@ -114,10 +116,10 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-782f" data-image-width="1920" data-image-height="1200">
+    <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-782f" data-image-width="1920" data-image-height="1200">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 7</h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 V3 by Adderly (25.06.2022)<br>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate V3 by Adderly (25.06.2022)<br>
         </h6>
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows7x64-2022-06-25-21-06-33.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows7x64-2022-06-25-21-16-57.png" alt="" data-image-width="1366" data-image-height="768">
@@ -125,7 +127,7 @@
         <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows7x64-2022-06-25-21-17-371.png" alt="" data-image-width="524" data-image-height="298">
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7x64-2022-06-25-21-18-47.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows7x64-2022-06-25-21-18-59.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-center u-text u-text-white u-text-3"> Обновления на 2011 год. (Service Pack 1) <br>
+        <p class="u-align-center-xl u-text u-text-white u-text-3"> Обновления на 2011 год. (Service Pack 1) <br>
           <br>Добавлен активатор.<br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5<br>
@@ -137,14 +139,14 @@
           <br>Образ весит 4.33 GB, после установки Windows занимает 12.4 GB. <br>
           <br>Образ основан на официальном MSDN Windows 7.
         </p>
-        <a href="https://drive.google.com/file/d/1JNkPowcstxkiC98wLjuzKDUQpeZQzFM3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 V3 by Adderly</a>
-        <a href="http://www.mediafire.com/file/6dpnjoyyz5nhuau/Windows_7_V3_by_Adderly.iso" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank">Альтернативная ссылка</a>
-        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 7 V3.1 by Adderly (27.07.2022)<br>
+        <a href="https://drive.google.com/file/d/1JNkPowcstxkiC98wLjuzKDUQpeZQzFM3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V3 by Adderly [Google Drive]</a>
+        <a href="http://www.mediafire.com/file/6dpnjoyyz5nhuau/Windows_7_V3_by_Adderly.iso" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V3 by Adderly [MediaFire]</a>
+        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 7 Ultimate V3.1 by Adderly (27.07.2022)<br>
         </h6>
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows7x64-2022-07-27-01-29-34.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-8" src="images/Windows7x64-2022-07-27-01-22-30.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-9" src="images/Windows7x64-2022-07-27-01-26-11.png" alt="" data-image-width="544" data-image-height="314">
-        <p class="u-align-center u-text u-text-white u-text-5"> Обновления на 2011 год. (Service Pack 1) <br>
+        <p class="u-align-center-xl u-text u-text-white u-text-5"> Обновления на 2011 год. (Service Pack 1) <br>
           <br>Добавлен активатор.<br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ <br>
           <br>Интегрированы Framework 4.8<br>
@@ -156,22 +158,24 @@
           <br>Образ основан на официальном MSDN Windows 7.<br>
           <br>Немного изменено содержимое папок "Браузеры, плееры, и архиваторы"<br>В отличии от 3.0, нет никаких тем.
         </p>
-        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-3" target="_blank">Скачать Windows 7 V3.1 by Adderly</a>
+        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-3" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
         <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.0</a>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 10</a>
       </div>
     </section>
-    <section class="u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-17f1">
+    <section class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-17f1">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center-md u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
-        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hidden-lg u-hidden-xl u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 V3.1 by Adderly</a>
+        <h1 class="u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <a href="https://drive.google.com/file/d/1JNkPowcstxkiC98wLjuzKDUQpeZQzFM3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V3 by Adderly [Google Drive]</a>
+        <a href="http://www.mediafire.com/file/6dpnjoyyz5nhuau/Windows_7_V3_by_Adderly.iso" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V3 by Adderly [MediaFire]</a>
+        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-3" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+    <footer class="u-align-center u-clearfix u-custom-color-12 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2022
         </p>
       </div></footer>
