--- a/Длительность-установки-сборок.html
+++ b/Длительность-установки-сборок.html
@@ -43,7 +43,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-grey-70 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-12 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -56,7 +56,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
@@ -64,16 +64,17 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Новости.html" style="padding: 10px 20px;">Новости</a>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Длительность-установки-сборок.html">Длительность установки сборок</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
 </li></ul>
@@ -92,6 +93,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-сборки.html">Сборки Windows Lite</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Lite-x32-Сборки.html">Сборки Windows Lite x32</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-Mini-сборки.html">Сборки Windows Mini</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
@@ -114,7 +116,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-image u-section-1" id="sec-6f8f" data-image-width="597" data-image-height="137">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
         <h3 class="u-align-center u-text u-text-white u-text-1">Тут будет информация о длительности установки сборок от Аддерли На SSD<br>Длительность может не совпадать с вашими подсчетами.<br>Все проверено на комплектующих, написанные ниже:
         </h3>
         <p class="u-align-center u-text u-text-white u-text-2">Комплектующие ноутбука:</p>
@@ -123,17 +125,17 @@
         </p>
         <h1 class="u-align-center u-text u-text-white u-text-5">Длительность установки на SSD:<br>(с помощью эмуляции)
         </h1>
-        <h4 class="u-align-center u-text u-text-white u-text-6"> Длительность установки Windows 11 V2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 20 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 16 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 18 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 17 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 11 ​Мин.<br>Длительности установки Windows 8.0  by Adderly на SSD - 14 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 16 ​Мин.<br>
+        <h4 class="u-align-center u-text u-text-white u-text-6"> Длительность установки Windows 11 V2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 20 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 16 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 18 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 17 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 11 ​Мин.<br>Длительности установки Windows 8.0  by Adderly на SSD - 14 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 16 ​Мин.<br>Длительности установки Windows 8.0 Mini by Adderly на SSD - 7 ​Мин.<br>
         </h4>
         <h1 class="u-align-center u-text u-text-white u-text-7">Длительность установки на SSD:<br>(с помощью флешки)
         </h1>
-        <h4 class="u-align-center u-text u-text-white u-text-8"> Длительность установки Windows 11 V2 by Adderly на SSD - 7 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 9 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 10 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 8 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 8 Мин.<br> Длительности установки Windows 8.0  by Adderly на SSD - 6 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 9 Мин.<br>
+        <h4 class="u-align-center u-text u-text-white u-text-8"> Длительность установки Windows 11 V2 by Adderly на SSD - 7 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 9 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 10 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 8 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 8 Мин.<br> Длительности установки Windows 8.0  by Adderly на SSD - 6 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 9 Мин.<br>Длительности установки Windows 8.0 Mini by Adderly на SSD - 4 ​Мин.<br>
         </h4>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+    <footer class="u-align-center u-clearfix u-custom-color-12 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2022
         </p>
       </div></footer>
